<resources>
    <string name="app_name">LedControl</string>
    <string name="ip">IpAddress</string>
    <string name="Conn">Connect</string>

    <string name="F1">Floor 1</string>
    <string name="R1.1">Room 1.1</string>
    <string name="R1.2">Room 1.2</string>

    <string name="F2">Floor 2</string>
    <string name="R2.1">Room 2.1</string>
    <string name="R2.2">Room 2.2</string>

    <string name="F3">Floor 3</string>
    <string name="R3.1">Room 3.1</string>
    <string name="R3.2">Room 3.2</string>

    <string name="F4">Floor 4</string>
    <string name="R4.1">Room 4.1</string>
    <string name="R4.2">Room 4.2</string>

    <string name="F5">Floor 5</string>
    <string name="R5.1">Room 5.1</string>
    <string name="R5.2">Room 5.2</string>

    <string name="F6">Floor 6</string>
    <string name="R6.1">Room 6.1</string>
    <string name="R6.2">Room 6.2</string>

    <string name="F7">Floor 7</string>
    <string name="R7.1">Room 7.1</string>
    <string name="R7.2">Room 7.2</string>

    <string name="F8">Floor 8</string>
    <string name="R8.1">Room 8.1</string>
    <string name="R8.2">Room 8.2</string>

    <string name="F9">Floor 9</string>
    <string name="R9.1">Room 9.1</string>
    <string name="R9.2">Room 9.2</string>



</resources>
