<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
           >

            <TextView
                android:id="@+id/txt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:text="@string/F9"
                />

            <Button
                android:id="@+id/R1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/R9.1"
                />

            <Button
                android:id="@+id/R2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/R9.2"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/txt2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:text="@string/F8" />

            <Button
                android:id="@+id/R3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/R8.1" />

            <Button
                android:id="@+id/R4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/R8.2" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/txt3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:text="@string/F7" />

            <Button
                android:id="@+id/R5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/R7.1" />

            <Button
                android:id="@+id/R6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/R7.2" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/txt4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/F6"
                android:paddingLeft="15dp"/>

            <Button
                android:id="@+id/R7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/R6.1" />

            <Button
                android:id="@+id/R8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/R6.2" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/txt5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/F5"
                android:paddingLeft="15dp"/>

            <Button
                android:id="@+id/R9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/R5.1" />

            <Button
                android:id="@+id/R10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/R5.2" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/txt6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/F4"
                android:paddingLeft="15dp"/>

            <Button
                android:id="@+id/R11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/R4.1" />

            <Button
                android:id="@+id/R12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/R4.2" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/txt7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/F3"
                android:paddingLeft="15dp"/>

            <Button
                android:id="@+id/R13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/R3.1" />

            <Button
                android:id="@+id/R14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/R3.2" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/txt8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/F2"
                android:paddingLeft="15dp"/>

            <Button
                android:id="@+id/R15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/R2.1" />

            <Button
                android:id="@+id/R16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/R2.2" />
        </TableRow><TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp">

        <TextView
            android:id="@+id/txt9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/F1"
            android:paddingLeft="15dp"/>

        <Button
            android:id="@+id/R17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/R1.1"
            android:onClick="controlRoom1"/>

        <Button
            android:id="@+id/R18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/R1.2"
            android:onClick="controlRoom2"/>
    </TableRow>



    </TableLayout>
</android.support.constraint.ConstraintLayout>